          'cupt::resolver::synchronize-source-versions' is set to 'none'.
        - Fixed a minor regression since 0.3.0 in determining version weight,
          including "essentialness" of the version.
        - Fixed a crash when performing a deep search for versions that have
          other than original version have, but still satisfiable
          pre-dependency relation expression.
      - Worker:
        - Don't pass --force-conflicts to 'install' subaction of heterogeneous
          actions, all conflicts should be already resolved at that stage.
        - Perform unconditional merge if configure action is dependent
          (directly or indirectly) on appropriate unpack one.
    - Core:
      - 'version_string_regex': allow debian part of the version contain '_',
        however Cupt::Cache::Package will print a warning in this case.
        (Closes: #541268)
  * debian/control:
    - Made 'cupt' binary package depend on sensible-utils which is not
      essential.
    - Bumped 'Standards-Version' to 3.8.3, no changes needed.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 11 Aug 2009 19:40:52 +0300

cupt (0.5.2) unstable; urgency=low

  * cupt:
    - Fixed a regression since 0.5.1 when using '+' and '-' expression
      suffixes.
  * Cupt:
    - System:
      - Worker:
        - While building action dependencies graph, deal properly with
          'abc' depends on 'x | y | ...' cases when 'x' is going to be
          removed and 'y' is going to be installed. Thanks to Daniel Moerner.
          (Closes: #539953)
        - While building action dependencies graph, ensure that if the action
          dependency has even one "not eat" property it won't be lost even in
          complicated merge scenarios (Closes: #540957).
        - While splitting heterogeneous actions, don't require additional dpkg
          flags not for 'configure' action, but for last one, which may differ.
    - Config: